# ai-chat

./: .gitignore  AGENTS.md  README.md  chainlit.md  chat.py  config.yaml  pyproject.toml
.chainlit/: config.toml
_core/: constants.py  utils.py
